Trying to fix double scroll bar issue on Chrome, Windows 10 when halfscreened.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,7 +6,6 @@
     text-align:center; 
     width: 100%;
     height: 100%;
-    background-size 100% 100%;
     background-repeat: repeat;
     overflow-x: scroll;
 }
